--- a/PSXDownloadHelper/PSXDownloadHelper/UrlReplace.resx
+++ b/PSXDownloadHelper/PSXDownloadHelper/UrlReplace.resx
@@ -123,7 +123,7 @@
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>9, 11</value>
+    <value>2, 14</value>
   </data>
   <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
     <value>44, 17</value>
@@ -154,7 +154,7 @@
     <value>NoControl</value>
   </data>
   <data name="label2.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 70</value>
+    <value>-7, 70</value>
   </data>
   <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
     <value>53, 17</value>
@@ -180,6 +180,9 @@
   <data name="&gt;&gt;label2.ZOrder" xml:space="preserve">
     <value>17</value>
   </data>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>135, 17</value>
+  </metadata>
   <data name="tb_local.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Left, Right</value>
   </data>
@@ -190,14 +193,11 @@
     <value>3, 4, 3, 4</value>
   </data>
   <data name="tb_local.Size" type="System.Drawing.Size, System.Drawing">
-    <value>626, 23</value>
+    <value>629, 23</value>
   </data>
   <data name="tb_local.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
   </data>
-  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>135, 17</value>
-  </metadata>
   <data name="tb_local.ToolTip" xml:space="preserve">
     <value>点击选取或者直接将要替换的文件拖放进来</value>
   </data>
@@ -223,7 +223,7 @@
     <value>3, 4, 3, 4</value>
   </data>
   <data name="tb_psn.Size" type="System.Drawing.Size, System.Drawing">
-    <value>626, 23</value>
+    <value>629, 23</value>
   </data>
   <data name="tb_psn.TabIndex" type="System.Int32, mscorlib">
     <value>4</value>
@@ -250,7 +250,7 @@
     <value>NoControl</value>
   </data>
   <data name="btn_replace.Location" type="System.Drawing.Point, System.Drawing">
-    <value>688, 66</value>
+    <value>691, 66</value>
   </data>
   <data name="btn_replace.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>3, 4, 3, 4</value>
@@ -286,7 +286,7 @@
     <value>NoControl</value>
   </data>
   <data name="lb_time.Location" type="System.Drawing.Point, System.Drawing">
-    <value>333, 131</value>
+    <value>336, 131</value>
   </data>
   <data name="lb_time.Size" type="System.Drawing.Size, System.Drawing">
     <value>48, 17</value>
@@ -349,7 +349,7 @@
     <value>3, 4, 3, 4</value>
   </data>
   <data name="tb_mark.Size" type="System.Drawing.Size, System.Drawing">
-    <value>272, 23</value>
+    <value>275, 23</value>
   </data>
   <data name="tb_mark.TabIndex" type="System.Int32, mscorlib">
     <value>9</value>
@@ -412,7 +412,7 @@
     <value>3, 4, 3, 4</value>
   </data>
   <data name="tb_lx.Size" type="System.Drawing.Size, System.Drawing">
-    <value>626, 23</value>
+    <value>629, 23</value>
   </data>
   <data name="tb_lx.TabIndex" type="System.Int32, mscorlib">
     <value>13</value>
@@ -433,10 +433,10 @@
     <value>NoControl</value>
   </data>
   <data name="label4.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 100</value>
+    <value>-4, 100</value>
   </data>
   <data name="label4.Size" type="System.Drawing.Size, System.Drawing">
-    <value>53, 17</value>
+    <value>50, 20</value>
   </data>
   <data name="label4.TabIndex" type="System.Int32, mscorlib">
     <value>12</value>
@@ -466,7 +466,7 @@
     <value>NoControl</value>
   </data>
   <data name="btn_enablelx.Location" type="System.Drawing.Point, System.Drawing">
-    <value>688, 96</value>
+    <value>691, 96</value>
   </data>
   <data name="btn_enablelx.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>3, 4, 3, 4</value>
@@ -499,7 +499,7 @@
     <value>NoControl</value>
   </data>
   <data name="btn_copy.Location" type="System.Drawing.Point, System.Drawing">
-    <value>688, 7</value>
+    <value>691, 7</value>
   </data>
   <data name="btn_copy.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>3, 4, 3, 4</value>
@@ -538,7 +538,7 @@
     <value>NoControl</value>
   </data>
   <data name="lb_copy.Location" type="System.Drawing.Point, System.Drawing">
-    <value>314, 11</value>
+    <value>317, 11</value>
   </data>
   <data name="lb_copy.MaximumSize" type="System.Drawing.Size, System.Drawing">
     <value>175, 0</value>
@@ -570,6 +570,9 @@
   <data name="&gt;&gt;lb_copy.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>135, 17</value>
+  </metadata>
   <data name="pic_isCdn.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
@@ -661,7 +664,7 @@
     <value>NoControl</value>
   </data>
   <data name="label5.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 38</value>
+    <value>-7, 40</value>
   </data>
   <data name="label5.Size" type="System.Drawing.Size, System.Drawing">
     <value>53, 17</value>
@@ -697,7 +700,7 @@
     <value>3, 4, 3, 4</value>
   </data>
   <data name="tb_filename.Size" type="System.Drawing.Size, System.Drawing">
-    <value>626, 23</value>
+    <value>629, 23</value>
   </data>
   <data name="tb_filename.TabIndex" type="System.Int32, mscorlib">
     <value>41</value>
@@ -717,37 +720,37 @@
   <data name="&gt;&gt;tb_filename.ZOrder" xml:space="preserve">
     <value>2</value>
   </data>
-  <data name="button1.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+  <data name="btn_patch.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
   </data>
-  <data name="button1.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+  <data name="btn_patch.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
-  <data name="button1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>687, 36</value>
+  <data name="btn_patch.Location" type="System.Drawing.Point, System.Drawing">
+    <value>690, 36</value>
   </data>
-  <data name="button1.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+  <data name="btn_patch.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>3, 4, 3, 4</value>
   </data>
-  <data name="button1.Size" type="System.Drawing.Size, System.Drawing">
+  <data name="btn_patch.Size" type="System.Drawing.Size, System.Drawing">
     <value>54, 25</value>
   </data>
-  <data name="button1.TabIndex" type="System.Int32, mscorlib">
+  <data name="btn_patch.TabIndex" type="System.Int32, mscorlib">
     <value>42</value>
   </data>
-  <data name="button1.Text" xml:space="preserve">
-    <value>Copy</value>
+  <data name="btn_patch.Text" xml:space="preserve">
+    <value>Block</value>
   </data>
-  <data name="&gt;&gt;button1.Name" xml:space="preserve">
-    <value>button1</value>
+  <data name="&gt;&gt;btn_patch.Name" xml:space="preserve">
+    <value>btn_patch</value>
   </data>
-  <data name="&gt;&gt;button1.Type" xml:space="preserve">
+  <data name="&gt;&gt;btn_patch.Type" xml:space="preserve">
     <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;button1.Parent" xml:space="preserve">
+  <data name="&gt;&gt;btn_patch.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
-  <data name="&gt;&gt;button1.ZOrder" xml:space="preserve">
+  <data name="&gt;&gt;btn_patch.ZOrder" xml:space="preserve">
     <value>1</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -763,7 +766,7 @@
     <value>3, 4, 3, 4</value>
   </data>
   <data name="$this.Size" type="System.Drawing.Size, System.Drawing">
-    <value>747, 243</value>
+    <value>750, 160</value>
   </data>
   <data name="&gt;&gt;timer_main.Name" xml:space="preserve">
     <value>timer_main</value>
