--- a/PSXDownloadHelper/PSXDownloadHelper/ServerConfig.resx
+++ b/PSXDownloadHelper/PSXDownloadHelper/ServerConfig.resx
@@ -127,22 +127,22 @@
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="alertLabel1.Font" type="System.Drawing.Font, System.Drawing">
-    <value>微软雅黑, 9pt</value>
+    <value>Microsoft YaHei, 9pt</value>
   </data>
   <data name="alertLabel1.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="alertLabel1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>210, 35</value>
+    <value>210, 38</value>
   </data>
   <data name="alertLabel1.MaximumSize" type="System.Drawing.Size, System.Drawing">
     <value>175, 0</value>
   </data>
   <data name="alertLabel1.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>10, 10, 10, 10</value>
+    <value>10, 11, 10, 11</value>
   </data>
   <data name="alertLabel1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>175, 122</value>
+    <value>175, 124</value>
   </data>
   <data name="alertLabel1.TabIndex" type="System.Int32, mscorlib">
     <value>34</value>
@@ -181,10 +181,10 @@
     <value>True</value>
   </metadata>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>6, 12</value>
+    <value>6, 13</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>452, 234</value>
+    <value>452, 254</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -1224,13 +1224,13 @@
     <value>3, 4, 3, 4</value>
   </data>
   <data name="formControl1.MaximumSize" type="System.Drawing.Size, System.Drawing">
-    <value>76, 20</value>
+    <value>76, 22</value>
   </data>
   <data name="formControl1.MinimumSize" type="System.Drawing.Size, System.Drawing">
-    <value>29, 20</value>
+    <value>29, 22</value>
   </data>
   <data name="formControl1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>47, 20</value>
+    <value>47, 22</value>
   </data>
   <data name="formControl1.TabIndex" type="System.Int32, mscorlib">
     <value>33</value>
@@ -1257,7 +1257,7 @@
     <value>NoControl</value>
   </data>
   <data name="label4.Location" type="System.Drawing.Point, System.Drawing">
-    <value>71, 17</value>
+    <value>71, 18</value>
   </data>
   <data name="label4.Size" type="System.Drawing.Size, System.Drawing">
     <value>135, 15</value>
@@ -1293,16 +1293,16 @@
     <value>NoControl</value>
   </data>
   <data name="btn_start.Location" type="System.Drawing.Point, System.Drawing">
-    <value>320, 56</value>
+    <value>320, 61</value>
   </data>
   <data name="btn_start.Size" type="System.Drawing.Size, System.Drawing">
-    <value>106, 95</value>
+    <value>106, 103</value>
   </data>
   <data name="btn_start.TabIndex" type="System.Int32, mscorlib">
     <value>18</value>
   </data>
   <data name="btn_start.Text" xml:space="preserve">
-    <value>  启动服务</value>
+    <value>Start</value>
   </data>
   <data name="&gt;&gt;btn_start.Name" xml:space="preserve">
     <value>btn_start</value>
@@ -1320,7 +1320,7 @@
     <value>Microsoft YaHei UI, 9pt</value>
   </data>
   <data name="cb_ip.Location" type="System.Drawing.Point, System.Drawing">
-    <value>108, 59</value>
+    <value>108, 64</value>
   </data>
   <data name="cb_ip.Size" type="System.Drawing.Size, System.Drawing">
     <value>149, 23</value>
@@ -1344,10 +1344,10 @@
     <value>NoControl</value>
   </data>
   <data name="pic_logo.Location" type="System.Drawing.Point, System.Drawing">
-    <value>7, 7</value>
+    <value>7, 8</value>
   </data>
   <data name="pic_logo.Size" type="System.Drawing.Size, System.Drawing">
-    <value>58, 54</value>
+    <value>58, 59</value>
   </data>
   <data name="pic_logo.SizeMode" type="System.Windows.Forms.PictureBoxSizeMode, System.Windows.Forms">
     <value>Zoom</value>
@@ -1380,16 +1380,16 @@
     <value>NoControl</value>
   </data>
   <data name="ckb_pcp.Location" type="System.Drawing.Point, System.Drawing">
-    <value>109, 131</value>
+    <value>109, 142</value>
   </data>
   <data name="ckb_pcp.Size" type="System.Drawing.Size, System.Drawing">
-    <value>89, 19</value>
+    <value>79, 19</value>
   </data>
   <data name="ckb_pcp.TabIndex" type="System.Int32, mscorlib">
     <value>20</value>
   </data>
   <data name="ckb_pcp.Text" xml:space="preserve">
-    <value>PC代理加速</value>
+    <value>PC Agent</value>
   </data>
   <data name="&gt;&gt;ckb_pcp.Name" xml:space="preserve">
     <value>ckb_pcp</value>
@@ -1407,7 +1407,7 @@
     <value>Microsoft YaHei UI, 9pt</value>
   </data>
   <data name="tb_port.Location" type="System.Drawing.Point, System.Drawing">
-    <value>263, 59</value>
+    <value>263, 64</value>
   </data>
   <data name="tb_port.Size" type="System.Drawing.Size, System.Drawing">
     <value>46, 23</value>
@@ -1440,16 +1440,16 @@
     <value>NoControl</value>
   </data>
   <data name="ckb_loaclspeed.Location" type="System.Drawing.Point, System.Drawing">
-    <value>213, 131</value>
+    <value>213, 142</value>
   </data>
   <data name="ckb_loaclspeed.Size" type="System.Drawing.Size, System.Drawing">
-    <value>74, 19</value>
+    <value>99, 19</value>
   </data>
   <data name="ckb_loaclspeed.TabIndex" type="System.Int32, mscorlib">
     <value>22</value>
   </data>
   <data name="ckb_loaclspeed.Text" xml:space="preserve">
-    <value>本地加速</value>
+    <value>Local raising</value>
   </data>
   <data name="&gt;&gt;ckb_loaclspeed.Name" xml:space="preserve">
     <value>ckb_loaclspeed</value>
@@ -1467,10 +1467,10 @@
     <value>NoControl</value>
   </data>
   <data name="pic_ap.Location" type="System.Drawing.Point, System.Drawing">
-    <value>212, 7</value>
+    <value>212, 8</value>
   </data>
   <data name="pic_ap.Size" type="System.Drawing.Size, System.Drawing">
-    <value>25, 25</value>
+    <value>25, 27</value>
   </data>
   <data name="pic_ap.SizeMode" type="System.Windows.Forms.PictureBoxSizeMode, System.Windows.Forms">
     <value>Zoom</value>
@@ -1491,7 +1491,7 @@
     <value>9</value>
   </data>
   <data name="cb_conntype.Font" type="System.Drawing.Font, System.Drawing">
-    <value>微软雅黑, 9pt</value>
+    <value>Microsoft YaHei, 9pt</value>
   </data>
   <data name="cb_conntype.Items" xml:space="preserve">
     <value>默认（推荐）</value>
@@ -1500,7 +1500,7 @@
     <value>兼容模式</value>
   </data>
   <data name="cb_conntype.Location" type="System.Drawing.Point, System.Drawing">
-    <value>108, 94</value>
+    <value>108, 102</value>
   </data>
   <data name="cb_conntype.Size" type="System.Drawing.Size, System.Drawing">
     <value>202, 25</value>
@@ -1530,16 +1530,16 @@
     <value>NoControl</value>
   </data>
   <data name="ckb_cdn.Location" type="System.Drawing.Point, System.Drawing">
-    <value>213, 161</value>
+    <value>213, 174</value>
   </data>
   <data name="ckb_cdn.Size" type="System.Drawing.Size, System.Drawing">
-    <value>77, 19</value>
+    <value>53, 19</value>
   </data>
   <data name="ckb_cdn.TabIndex" type="System.Int32, mscorlib">
     <value>37</value>
   </data>
   <data name="ckb_cdn.Text" xml:space="preserve">
-    <value>CDN加速</value>
+    <value>CDN</value>
   </data>
   <data name="&gt;&gt;ckb_cdn.Name" xml:space="preserve">
     <value>ckb_cdn</value>
@@ -1560,19 +1560,19 @@
     <value>NoControl</value>
   </data>
   <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>9, 62</value>
+    <value>9, 67</value>
   </data>
   <data name="label1.RightToLeft" type="System.Windows.Forms.RightToLeft, System.Windows.Forms">
     <value>No</value>
   </data>
   <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>100, 17</value>
+    <value>100, 18</value>
   </data>
   <data name="label1.TabIndex" type="System.Int32, mscorlib">
     <value>15</value>
   </data>
   <data name="label1.Text" xml:space="preserve">
-    <value>IP地址：</value>
+    <value>IP：</value>
   </data>
   <data name="label1.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
     <value>MiddleRight</value>
@@ -1596,16 +1596,16 @@
     <value>NoControl</value>
   </data>
   <data name="label5.Location" type="System.Drawing.Point, System.Drawing">
-    <value>7, 95</value>
+    <value>7, 103</value>
   </data>
   <data name="label5.Size" type="System.Drawing.Size, System.Drawing">
-    <value>102, 17</value>
+    <value>102, 18</value>
   </data>
   <data name="label5.TabIndex" type="System.Int32, mscorlib">
     <value>35</value>
   </data>
   <data name="label5.Text" xml:space="preserve">
-    <value>连接模式：</value>
+    <value>Mode：</value>
   </data>
   <data name="label5.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
     <value>MiddleRight</value>
@@ -1629,16 +1629,16 @@
     <value>NoControl</value>
   </data>
   <data name="label3.Location" type="System.Drawing.Point, System.Drawing">
-    <value>7, 131</value>
+    <value>7, 142</value>
   </data>
   <data name="label3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>102, 17</value>
+    <value>102, 18</value>
   </data>
   <data name="label3.TabIndex" type="System.Int32, mscorlib">
     <value>19</value>
   </data>
   <data name="label3.Text" xml:space="preserve">
-    <value>进阶功能：</value>
+    <value>Advanced：</value>
   </data>
   <data name="label3.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
     <value>MiddleRight</value>
@@ -1665,16 +1665,19 @@
     <value>NoControl</value>
   </data>
   <data name="ckb_lixianspeed.Location" type="System.Drawing.Point, System.Drawing">
-    <value>109, 161</value>
+    <value>109, 174</value>
+  </data>
+  <data name="ckb_lixianspeed.RightToLeft" type="System.Windows.Forms.RightToLeft, System.Windows.Forms">
+    <value>No</value>
   </data>
   <data name="ckb_lixianspeed.Size" type="System.Drawing.Size, System.Drawing">
-    <value>74, 19</value>
+    <value>103, 19</value>
   </data>
   <data name="ckb_lixianspeed.TabIndex" type="System.Int32, mscorlib">
     <value>21</value>
   </data>
   <data name="ckb_lixianspeed.Text" xml:space="preserve">
-    <value>离线加速</value>
+    <value>Offline Rising</value>
   </data>
   <data name="&gt;&gt;ckb_lixianspeed.Name" xml:space="preserve">
     <value>ckb_lixianspeed</value>
@@ -1698,7 +1701,7 @@
     <value>0, 0</value>
   </data>
   <data name="mainPanel1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>452, 234</value>
+    <value>452, 254</value>
   </data>
   <data name="mainPanel1.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
