--- a/PSXDownloadHelper/PSXDownloadHelper/UrlReplace.resx
+++ b/PSXDownloadHelper/PSXDownloadHelper/UrlReplace.resx
@@ -148,7 +148,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;label1.ZOrder" xml:space="preserve">
-    <value>18</value>
+    <value>17</value>
   </data>
   <data name="label2.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
@@ -178,7 +178,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;label2.ZOrder" xml:space="preserve">
-    <value>17</value>
+    <value>16</value>
   </data>
   <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>135, 17</value>
@@ -193,10 +193,10 @@
     <value>3, 4, 3, 4</value>
   </data>
   <data name="tb_local.Size" type="System.Drawing.Size, System.Drawing">
-    <value>629, 23</value>
+    <value>573, 23</value>
   </data>
   <data name="tb_local.TabIndex" type="System.Int32, mscorlib">
-    <value>3</value>
+    <value>4</value>
   </data>
   <data name="tb_local.ToolTip" xml:space="preserve">
     <value>点击选取或者直接将要替换的文件拖放进来</value>
@@ -211,7 +211,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;tb_local.ZOrder" xml:space="preserve">
-    <value>16</value>
+    <value>15</value>
   </data>
   <data name="tb_psn.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Left, Right</value>
@@ -223,13 +223,10 @@
     <value>3, 4, 3, 4</value>
   </data>
   <data name="tb_psn.Size" type="System.Drawing.Size, System.Drawing">
-    <value>629, 23</value>
+    <value>573, 23</value>
   </data>
   <data name="tb_psn.TabIndex" type="System.Int32, mscorlib">
-    <value>4</value>
-  </data>
-  <data name="tb_psn.ToolTip" xml:space="preserve">
-    <value>双击即可将完整的PSN地址复制进剪贴板</value>
+    <value>1</value>
   </data>
   <data name="&gt;&gt;tb_psn.Name" xml:space="preserve">
     <value>tb_psn</value>
@@ -241,7 +238,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;tb_psn.ZOrder" xml:space="preserve">
-    <value>15</value>
+    <value>14</value>
   </data>
   <data name="btn_replace.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -250,19 +247,19 @@
     <value>NoControl</value>
   </data>
   <data name="btn_replace.Location" type="System.Drawing.Point, System.Drawing">
-    <value>691, 66</value>
+    <value>634, 66</value>
   </data>
   <data name="btn_replace.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>3, 4, 3, 4</value>
   </data>
   <data name="btn_replace.Size" type="System.Drawing.Size, System.Drawing">
-    <value>54, 25</value>
+    <value>111, 25</value>
   </data>
   <data name="btn_replace.TabIndex" type="System.Int32, mscorlib">
     <value>5</value>
   </data>
   <data name="btn_replace.Text" xml:space="preserve">
-    <value>Select</value>
+    <value>Select File</value>
   </data>
   <data name="&gt;&gt;btn_replace.Name" xml:space="preserve">
     <value>btn_replace</value>
@@ -274,7 +271,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;btn_replace.ZOrder" xml:space="preserve">
-    <value>14</value>
+    <value>13</value>
   </data>
   <data name="lb_time.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -297,6 +294,9 @@
   <data name="lb_time.Text" xml:space="preserve">
     <value>Time：</value>
   </data>
+  <data name="lb_time.Visible" type="System.Boolean, mscorlib">
+    <value>False</value>
+  </data>
   <data name="&gt;&gt;lb_time.Name" xml:space="preserve">
     <value>lb_time</value>
   </data>
@@ -307,7 +307,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;lb_time.ZOrder" xml:space="preserve">
-    <value>13</value>
+    <value>12</value>
   </data>
   <data name="label3.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
@@ -327,6 +327,9 @@
   <data name="label3.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
     <value>TopRight</value>
   </data>
+  <data name="label3.Visible" type="System.Boolean, mscorlib">
+    <value>False</value>
+  </data>
   <data name="&gt;&gt;label3.Name" xml:space="preserve">
     <value>label3</value>
   </data>
@@ -337,7 +340,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;label3.ZOrder" xml:space="preserve">
-    <value>12</value>
+    <value>11</value>
   </data>
   <data name="tb_mark.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Left, Right</value>
@@ -354,6 +357,9 @@
   <data name="tb_mark.TabIndex" type="System.Int32, mscorlib">
     <value>9</value>
   </data>
+  <data name="tb_mark.Visible" type="System.Boolean, mscorlib">
+    <value>False</value>
+  </data>
   <data name="&gt;&gt;tb_mark.Name" xml:space="preserve">
     <value>tb_mark</value>
   </data>
@@ -364,7 +370,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;tb_mark.ZOrder" xml:space="preserve">
-    <value>11</value>
+    <value>10</value>
   </data>
   <metadata name="timer_main.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
@@ -400,7 +406,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;btn_del.ZOrder" xml:space="preserve">
-    <value>10</value>
+    <value>9</value>
   </data>
   <data name="tb_lx.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Left, Right</value>
@@ -417,6 +423,9 @@
   <data name="tb_lx.TabIndex" type="System.Int32, mscorlib">
     <value>13</value>
   </data>
+  <data name="tb_lx.Visible" type="System.Boolean, mscorlib">
+    <value>False</value>
+  </data>
   <data name="&gt;&gt;tb_lx.Name" xml:space="preserve">
     <value>tb_lx</value>
   </data>
@@ -427,7 +436,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;tb_lx.ZOrder" xml:space="preserve">
-    <value>8</value>
+    <value>7</value>
   </data>
   <data name="label4.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
@@ -447,6 +456,9 @@
   <data name="label4.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
     <value>TopRight</value>
   </data>
+  <data name="label4.Visible" type="System.Boolean, mscorlib">
+    <value>False</value>
+  </data>
   <data name="&gt;&gt;label4.Name" xml:space="preserve">
     <value>label4</value>
   </data>
@@ -457,7 +469,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;label4.ZOrder" xml:space="preserve">
-    <value>9</value>
+    <value>8</value>
   </data>
   <data name="btn_enablelx.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -480,6 +492,9 @@
   <data name="btn_enablelx.Text" xml:space="preserve">
     <value>Enable</value>
   </data>
+  <data name="btn_enablelx.Visible" type="System.Boolean, mscorlib">
+    <value>False</value>
+  </data>
   <data name="&gt;&gt;btn_enablelx.Name" xml:space="preserve">
     <value>btn_enablelx</value>
   </data>
@@ -490,7 +505,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;btn_enablelx.ZOrder" xml:space="preserve">
-    <value>7</value>
+    <value>6</value>
   </data>
   <data name="btn_copy.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -499,19 +514,19 @@
     <value>NoControl</value>
   </data>
   <data name="btn_copy.Location" type="System.Drawing.Point, System.Drawing">
-    <value>691, 7</value>
+    <value>634, 7</value>
   </data>
   <data name="btn_copy.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>3, 4, 3, 4</value>
   </data>
   <data name="btn_copy.Size" type="System.Drawing.Size, System.Drawing">
-    <value>54, 25</value>
+    <value>111, 25</value>
   </data>
   <data name="btn_copy.TabIndex" type="System.Int32, mscorlib">
-    <value>15</value>
+    <value>2</value>
   </data>
   <data name="btn_copy.Text" xml:space="preserve">
-    <value>Copy</value>
+    <value>Copy URL</value>
   </data>
   <data name="&gt;&gt;btn_copy.Name" xml:space="preserve">
     <value>btn_copy</value>
@@ -523,7 +538,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;btn_copy.ZOrder" xml:space="preserve">
-    <value>6</value>
+    <value>5</value>
   </data>
   <data name="lb_copy.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -604,7 +619,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;pic_isCdn.ZOrder" xml:space="preserve">
-    <value>19</value>
+    <value>18</value>
   </data>
   <data name="btn_ping.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
@@ -624,6 +639,9 @@
   <data name="btn_ping.Text" xml:space="preserve">
     <value>Ping</value>
   </data>
+  <data name="btn_ping.Visible" type="System.Boolean, mscorlib">
+    <value>False</value>
+  </data>
   <data name="&gt;&gt;btn_ping.Name" xml:space="preserve">
     <value>btn_ping</value>
   </data>
@@ -634,7 +652,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;btn_ping.ZOrder" xml:space="preserve">
-    <value>5</value>
+    <value>4</value>
   </data>
   <data name="tb_Ping.Location" type="System.Drawing.Point, System.Drawing">
     <value>546, 133</value>
@@ -648,6 +666,9 @@
   <data name="tb_Ping.Text" xml:space="preserve">
     <value>*</value>
   </data>
+  <data name="tb_Ping.Visible" type="System.Boolean, mscorlib">
+    <value>False</value>
+  </data>
   <data name="&gt;&gt;tb_Ping.Name" xml:space="preserve">
     <value>tb_Ping</value>
   </data>
@@ -658,7 +679,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;tb_Ping.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>3</value>
   </data>
   <data name="label5.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
@@ -688,7 +709,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;label5.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>2</value>
   </data>
   <data name="tb_filename.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Left, Right</value>
@@ -700,13 +721,13 @@
     <value>3, 4, 3, 4</value>
   </data>
   <data name="tb_filename.Size" type="System.Drawing.Size, System.Drawing">
-    <value>629, 23</value>
+    <value>573, 23</value>
   </data>
   <data name="tb_filename.TabIndex" type="System.Int32, mscorlib">
-    <value>41</value>
+    <value>3</value>
   </data>
   <data name="tb_filename.ToolTip" xml:space="preserve">
-    <value>点击选取或者直接将要替换的文件拖放进来</value>
+    <value>File Name</value>
   </data>
   <data name="&gt;&gt;tb_filename.Name" xml:space="preserve">
     <value>tb_filename</value>
@@ -718,39 +739,6 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;tb_filename.ZOrder" xml:space="preserve">
-    <value>2</value>
-  </data>
-  <data name="btn_patch.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Top, Right</value>
-  </data>
-  <data name="btn_patch.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="btn_patch.Location" type="System.Drawing.Point, System.Drawing">
-    <value>690, 36</value>
-  </data>
-  <data name="btn_patch.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>3, 4, 3, 4</value>
-  </data>
-  <data name="btn_patch.Size" type="System.Drawing.Size, System.Drawing">
-    <value>54, 25</value>
-  </data>
-  <data name="btn_patch.TabIndex" type="System.Int32, mscorlib">
-    <value>42</value>
-  </data>
-  <data name="btn_patch.Text" xml:space="preserve">
-    <value>Block</value>
-  </data>
-  <data name="&gt;&gt;btn_patch.Name" xml:space="preserve">
-    <value>btn_patch</value>
-  </data>
-  <data name="&gt;&gt;btn_patch.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;btn_patch.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;btn_patch.ZOrder" xml:space="preserve">
     <value>1</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -766,7 +754,7 @@
     <value>3, 4, 3, 4</value>
   </data>
   <data name="$this.Size" type="System.Drawing.Size, System.Drawing">
-    <value>750, 160</value>
+    <value>750, 97</value>
   </data>
   <data name="&gt;&gt;timer_main.Name" xml:space="preserve">
     <value>timer_main</value>
